--- a/src/main/resources/com/c195/c195/Customers.fxml
+++ b/src/main/resources/com/c195/c195/Customers.fxml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="500.0" prefWidth="775.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.c195.c195.controller.Customers">
+<AnchorPane prefHeight="500.0" prefWidth="775.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.c195.c195.controller.Customers">
     <TableView fx:id="custTable" layoutX="16.0" layoutY="15.0" prefHeight="338.0" prefWidth="744.0">
       <columns>
           <TableColumn fx:id="custIdCol" prefWidth="90.0" text="Customer ID" />
@@ -33,4 +40,6 @@
         <Button fx:id="custUpdateLabel" mnemonicParsing="false" onAction="#actionCustUpdate" prefWidth="75.0" text="Update" />
     </GridPane>
     <Button fx:id="backToMenu" layoutX="654.0" layoutY="446.0" mnemonicParsing="false" onAction="#backToMenu" text="Back to Menu" />
+   <TextField id="custSearchTextField" fx:id="custSearchTextField" layoutX="611.0" layoutY="366.0" promptText="Enter ID or Name" />
+   <Text id="custSearchTextLabel" layoutX="485.0" layoutY="383.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Search for a Customer:" />
 </AnchorPane>
